--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.3.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@imagekit/react": "^5.0.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid-pro": "^8.0.0-beta.3",
