--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.74.7",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "jodit-react": "^5.2.19",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
