--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@imagekit/react": "^5.0.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-charts-pro": "^8.5.3",
     "@mui/x-data-grid-pro": "^8.0.0-beta.3",
     "@mui/x-license": "^8.0.0",
     "@reduxjs/toolkit": "^2.8.2",
